# moodsic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  help.txt  pyproject.toml  requirements.txt
apps/ai/: __init__.py
apps/context/: apps.py
apps/context/admin/: __init__.py  cities_light_admin.py  weather_context.py
apps/context/management/commands/: setup_geo.py
apps/context/migrations/: 0001_initial.py  0002_alter_weathercontext_options_and_more.py
apps/context/models/: __init__.py  weather_context.py
apps/context/services/: weather_service.py
apps/context/tests/: test_weather.py
apps/integrations/: __init__.py
apps/music/admin/: __init__.py  album.py  artist.py  playlist.py  track.py
apps/music/management/commands/: verify_spotify.py
apps/music/migrations/: 0001_initial.py
apps/music/models/: __init__.py  album.py  artist.py  playlist.py  track.py
apps/music/services/: spotify_music_service.py
apps/music/tests/: test_models.py  test_spotify_service.py
apps/playlists/: __init__.py
apps/users/: adapter.py  urls.py
apps/users/admin/: user.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_avatar_url.py  0003_alter_user_spotify_id.py  0004_alter_user_spotify_id.py
apps/users/models/: user.py
apps/users/tests/: test_adapter.py  test_models.py  test_views.py
apps/users/views/: __init__.py  profile_view.py
config/: settings.py  urls.py
docs/: README.md
templates/: base.html
templates/users/: profile.html
